<resources>

	<!--general-->
	<string name="app_name">Math Trainer</string>
	<string name="open_link_err_msg">Cannot open link</string>

	<!--links & email--> <!--TODO move this section strings to another place (like const val)-->
	<string name="market_pre_app_url">market://details?id=</string>
	<string name="google_play_pre_app_link">https://play.google.com/store/apps/details?id=</string>
	<string name="contact_email_address">hebapps.tech@gmail.com</string>

	<!--MainActivity-->
	<string name="start_game">Play</string>
	<string name="settings">Settings</string>
	<string name="pre_user_hello_message">Hello</string>
	<string name="share_via">Share via</string>
	<string name="share_pre_message">Download \'Math Trainer\' for free:</string>
	<string name="error">Error</string>
	<string name="not_signed_err_msg">You must to sign up before using the app</string>

	<!-- user_level_xp -->
	<string name="level_num">Level %1$d</string>
	<string name="xp_num">%1$d XP</string>

	<!-- ContactUsDialog -->
	<string name="contact_us_msg_label">Message:</string>
	<string name="contact_us_hint_msg">Write your message here</string>
	<string name="send_msg">Send</string>
	<string name="via"> - </string>
	<string name="resolution">Resolution</string>
	<string name="pixels">pixels</string>
	<string name="model">Model</string>
	<string name="android_version">OS version</string>
	<string name="application_version">Application version</string>

	<!-- WhatsNewDialog -->
	<string name="whats_new_dialog_title">What\'s new?</string>

	<!-- RateUsDialog -->
	<string name="rate_us_msg">You really seem to like this app, \'%1$s\'.\nIt would be great if you took a moment to rate it.</string>
	<string name="open_market_err_msg">Cannot launch market</string>
	<string name="rate_us_bt">Rate this app</string>
	<string name="exit">Exit</string>

	<!--main menu-->
	<string name="share">Share</string>
	<string name="about">About</string>
	<string name="help">Help</string>
	<string name="contact_us">Contact us</string>
	<string name="rate_us">Rate us</string>
	<string name="open_db_builder">Open DB builder</string>
	<string name="open_tests_activity">Open tests activity</string>
	<string name="open_dummy_res_activity">Open Dummy result activity</string>

	<!--SignUpActivity-->
	<string name="fill_sign_up_info_msg">Please Fill your info:</string>
	<string name="user_name_field">Name:</string>
	<string name="user_name_field_hint">Enter your name here</string>
	<string name="gender_field">Gender:</string>
	<string name="male">Male</string>
	<string name="female">Female</string>
	<string name="sign_up">Sign up</string>

	<!--RestartAppDialog-->
	<string name="restart_app_dialog_title">Restart required</string>
	<string name="restart_app_dialog_msg">You need restart the application to apply these changes</string>
	<string name="later">Later</string>
	<string name="restart_app">Restart</string>

	<!--MainSettingsActivity-->
	<string name="account">Account</string>
	<string name="display">Display</string>
	<string name="notifications">Notifications</string>
	<string name="game">Game</string>
	<string name="logged_as">Logged as</string>
	<string name="not_connected">Not connected</string>
	<string name="reset_all_settings_msg">Are you sure you want to reset settings?\nall data will be erase.</string>
	<string name="reset_all_settings_success_msg">All settings has been reset successfully</string>

	<!--main_settings_menu-->
	<string name="reset_all_settings">Reset settings</string>

	<!--AccountSettActivity-->
	<string name="account_info_title">Your info:</string>
	<string name="log_out">Log out</string>
	<string name="log_out_msg">Are you sure you want to log out? all data will be lost</string>

	<!--ChooseCategoryActivity-->
	<string name="choose_category_title">Choose category:</string>
	<string name="category">Category</string>
	<string name="more_info">More info</string>
	<string name="no_categories_error_msg">Not found categories</string>

	<!--HelpCategoryDialog-->
	<string name="close">Close</string>

	<!--ChooseTopicActivity-->
	<string name="choose_topic_title">Choose topic:</string>
	<string name="topic">Topic</string>
	<string name="no_topics_error_msg">Not found topics</string>

	<!--PercentageBar-->
	<string name="percentage">Percentage</string> <!--TODO use this-->
	<string name="percentage_display_text">%1$d \%%</string>

	<!--ChooseLevelActivity-->
	<string name="choose_level_title">Choose level:</string>
	<string name="level">Level</string>
	<string name="no_levels_error_msg">Not found levels</string>

	<!--PlayQuizActivity-->
	<string name="choose_gift">Choose gift</string>

	<!--QuizResultActivity-->
	<string name="time">Time</string>
	<string name="xp">XP</string>
	<string name="new_record">(New record!)</string>
	<string name="backToMenu">Back</string>
	<string name="next_level">Next level</string>
	<string name="restart_game">Restart</string>

	<!--ShowAnswersResActivity-->
	<string name="not_found_questions">Not found questions</string>

	<!--quiz_question_result_info-->
	<string name="is_corrected_answer">is corrected answer</string>
	<string name="question_label">Question:</string>
	<string name="correct_answer_label">Correct answer:</string>
	<string name="user_answer_label">Your answer:</string>

	<!--LockedLevelDialog-->
	<string name="level_locked_dialog_title">Level lock</string>
	<string name="level_locked_dialog_msg">%1$s is lock.\nto unlock this level, you need to pass %2$s with %3$d stars at least</string>

	<!--DbBuilderActivity-->
	<string name="copied_to_clipboard_msg">The text was copied to clipboard</string>

	<!--DBTask-->
	<string name="loading">Loading</string>

	<!--ResumeGameDialog-->
	<string name="resume_game_dialog_title">Game paused</string>
	<string name="resume_game_dialog_msg">press \'%1$s\' for resume</string>
	<string name="continue_game">Continue</string>

	<!--ExitGameDialog-->
	<string name="exit_game_dialog_title">Exit</string>
	<string name="exit_game_dialog_msg">Are you sure you want to exit?</string>

	<!--TimeFormatter-->
	<string name="millis">milliseconds</string>
	<string name="seconds">seconds</string>
	<string name="minutes">minutes</string>
	<string name="hours">hours</string>
	<string name="days">days</string>
	<string name="years">years</string>

	<!--base_tutorial_dialog_view-->
	<string name="tutorial_dialog_not_show_again">don\'t show again</string>

	<!--BaseTutorialDialog-->
	<string name="tutorial_dialog_title">Tutorial</string>

	<!--GameTutorialDialog-->
	<string name="game_tutorial_dialog_title">Game tutorial</string>

	<!--DisplaySettingsActivity-->
	<string name="display_settings">Display settings</string>
	<string name="math_display_type">Math display type</string>
	<string name="choose_math_display_type_msg">Choose a math display type:</string>
</resources>
