<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_padding"
    android:paddingBottom="@dimen/activity_vertical_padding"
    android:paddingStart="@dimen/activity_horizontal_padding"
    android:paddingLeft="@dimen/activity_horizontal_padding"
    android:paddingEnd="@dimen/activity_horizontal_padding"
    android:paddingRight="@dimen/activity_horizontal_padding"
    tools:context=".ui.activities.SignUpActivity">

    <ScrollView
        android:id="@+id/scrollView_signUpForm"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView_fillInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fill_sign_up_info_msg"
                android:textColor="#2B2B2B"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name_field"
                    android:textColor="#2B2B2B"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editText_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/user_name_field_hint"
                    android:imeOptions="actionDone"
                    android:lines="1"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textSize="20sp"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_field"
                    android:textColor="#2B2B2B"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radioGroup_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/radio_female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <heb.apps.mathtrainer.ui.widget.BaseButton
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bt_blue"
        android:text="@android:string/ok"
        android:textColor="@color/btText"
        android:textSize="25sp">
    </heb.apps.mathtrainer.ui.widget.BaseButton>
</RelativeLayout>
