<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:background="@drawable/question_result_info_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="3dp">


	<LinearLayout
		android:id="@+id/linearLayout_earnXpSection"
		android:visibility="gone"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="3dp"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView_earnXpValue"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:textColor="@color/quizResEarnXpText"
			android:textSize="17sp"
			android:textStyle="bold" />

		<ImageView
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:layout_marginStart="3dp"
			android:contentDescription="@string/xp"
			android:src="@drawable/ic_xp" />
	</LinearLayout>

	<LinearLayout
		android:id="@+id/linearLayout_timeSection"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="3dp"
		android:gravity="center"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text=""
			android:textColor="@color/quizResTimeText"
			android:textSize="17sp"
			android:textStyle="bold" />

		<ImageView
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:layout_marginStart="3dp"
			android:contentDescription="@string/time"
			android:src="@drawable/ic_time" />

		<TextView
			android:id="@+id/textView_deltaFromRecord"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="3dp"
			android:text=""
			android:visibility="gone"
			android:textColor="@color/quizResDeltaFromRecordText"
			android:textSize="15sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textView_newRecord"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="3dp"
			android:visibility="gone"
			android:text="@string/new_record"
			android:textColor="@color/quizResNewRecordText"
			android:textSize="15sp"
			android:textStyle="bold" />
	</LinearLayout>

</LinearLayout>
